[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-debug-env"
version = "1.0.0"
description = "OpenEnv environment for SQL query debugging, security review, and performance optimization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Satyam Sharma", email = "sharmasatyam01@gmail.com" }
]
keywords = ["openenv", "sql", "reinforcement-learning", "code-review", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/BaneXP/sql-debug-env"
Repository = "https://github.com/baneXP/sql-debug-env"

[tool.setuptools.packages.find]
where = ["."]
include = ["sql_debug_env*"]

[tool.openenv]
name = "sql-debug-env"
version = "1.0.0"
entry_point = "app:app"
tasks = ["classify_issue", "fix_query", "full_review"]
